--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -164,31 +164,54 @@ header nav ul li a {
         transform: translateX(-100%); 
     } 
 }
-.acadmy_float_logo {
-    position: fixed;
-    bottom: 50px;
-    right: 5px;
-    width: 50px;
-    height: 50px;
-    background-image: url('./assets/imgs/acadmy_logo.jpg');
-    background-size: cover;
-    background-position: center;
-    border-radius: 50%;
+#contact_me {
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+#contactForm {
+    background-color: #1c1c1c;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    max-width: 400px;
+    width: 100%;  
+}
+label {
+    display: block;
+    margin-bottom: 8px;
+    font-size: 14px;
+    color: #ccc;
+}
+input[type="text"],input[type="email"], input[type="number"], textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #444;
+    border-radius: 4px;
+    background-color: #333;
+    color: #fff;
+}
+input[type="text"]::placeholder, input[type="email"]::placeholder, input[type="number"]::placeholder, textarea::placeholder {color: #aaa;}
+textarea {resize: none;}
+.submit_button {
+    background: deepskyblue;
+    border: deepskyblue solid 2px;
+}
+.submit_button {
+    background-color: #007bff;
+    color: white;
+    padding: 12px;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    z-index: 1000;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    font-size: 16px;
 }
-.acadmy_float_logo.clicked {
-    position: fixed;
-    width: 50%;
-    height: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10px;
-    z-index: 10000;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+.submit_button:hover {
+    background-color: #0056b3;
 }
+h1 {margin: 20px 0; color: #444; text-align: center;}
 footer { 
     background: #222; 
     padding: 20px 0; 
