--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -195,6 +195,27 @@ textarea {
 .submit_button:hover { 
     background-color: #0056b3; 
 }
+.acadmy_float_logo {
+    position: fixed;
+    bottom: 10%;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-image: url('/assets/imgs/acadmy_logo.jpg');
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.5s ease;
+    z-index: 1000;
+}
+.acadmy_float_logo.expanded {
+    width: 200px;
+    height: 200px;
+    bottom: 50%;
+    right: 50%;
+    transform: translate(50%, 50%);
+}
 footer { 
     background: #222; 
     padding: 20px 0; 
