--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,7 +7,7 @@
 body { 
     background-color: #000; 
     color: white; 
-    background-image: url('assets/imgs/bg_image.jpg'); 
+    background-image: url('./assets/imgs/bg_image.jpg'); 
     background-size: cover; 
     background-position: center; 
     display: flex; 
@@ -201,7 +201,7 @@ textarea {
     right: 20px;
     width: 50px;
     height: 50px;
-    background-image: url('/assets/imgs/acadmy_logo.jpg');
+    background-image: url('./assets/imgs/acadmy_logo.jpg');
     background-size: cover;
     background-position: center;
     border-radius: 50%;
