--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -175,6 +175,10 @@ input[type="text"], input[type="email"], input[type="number"], textarea {
     background-color: #333; 
     color: #fff; 
 }
+input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {-webkit-appearance: none; margin: 0;}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
 input::placeholder, textarea::placeholder { 
     color: #aaa; 
 }
